package shared;

public class Admin {
    // Attribute
    // Konstruktor
    // Methoden
    // Getter und Setter
}
