package shared;

public class Jalousie extends SmartDevice{
    // Attribute
    // Konstruktor
     public Jalousie(String name) {
        super(name);
    }

    // Methoden
    public String getStatusAsString() {
        throw new UnsupportedOperationException("Unimplemented method 'getStatusAsString'");
    }

    // Getter und Setter
}