package shared;

public interface Schaltbar {
    // Methoden
    public void schalte();
    
    public boolean getStatusAsBoolean();
}