@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package java.rmi {
    interface Remote <<interface>> {
    }
}

package java.rmi.server {
    class UnicastRemoteObject {
        # UnicastRemoteObject()
    }
}

package shared {
    class Admin {
    }

    class Gebaeude {
        - {static} serialVersionUID: long = 1L
        - name: String
        - raeume: HashMap<String, Raum>
        + Gebaeude(name: String)
        + setName(name: String): void
        + getName(): String
        + addRaum(raum: Raum): void
        + getRaeume(): HashMap<String, Raum>
        + getRaum(name: String): Raum
    }

    class HeizungsThermostat {
        - zielTemperatur: double
        - aktuelleTemperatur: double
        - letzteZielTemperatur: double = 5.0
        - frostschutzmodus: boolean = true
        + HeizungsThermostat(name: String, zielTemperatur: double, aktuelleTemperatur: double)
        + HeizungsThermostat(name: String, zielTemperatur: double)
        + schalte(): void
        + waermer(): void
        + kuehler(): void
        + getStatusAsBoolean(): boolean
        + getStatusAsString(): String
        + setZielTemperatur(zielTemperatur: double): void
        + getZielTemperatur(): double
        + setAktuelleTemperatur(aktuelleTemperatur: double): void
        + getAktuelleTemperatur(): double
        + getLetzteTemperatur(): double
    }

    class Jalousie {
        + Jalousie(name: String)
        + getStatusAsString(): String
    }

    class Lichtschalter {
        - status: boolean = false
        + Lichtschalter(name: String)
        + schalte(): void
        + getStatusAsBoolean(): boolean
        + getStatusAsString(): String
    }

    class Raum {
        - {static} serialVersionUID: long = 1L
        - name: String
        - geraete: ArrayList<SmartDevice>
        + Raum(name: String)
        + setName(name: String): void
        + getName(): String
        + addGeraet(geraet: SmartDevice): void
        + getGeraet(index: int): SmartDevice
        + getGeraete(): ArrayList<SmartDevice>
    }

    interface Schaltbar <<interface>> {
        + schalte(): void
        + getStatusAsBoolean(): boolean
    }

    abstract class SmartDevice {
        - {static} serialVersionUID: long = 1L
        - id: String
        - name: String
        + SmartDevice(name: String)
        + {abstract} getStatusAsString(): String
        + getId(): String
        + setName(name: String): void
        + getName(): String
    }

    interface SmartHomeService <<interface>> {
        + getGebaeude(): Gebaeude
        + getRaum(raumName: String): Raum
        + befehlAusfuehren(raumName: String, geraetName: String, befehl: String, wert: String): String
    }
}

package server {
    class PersistenzManager {
        - {static} DATEI_NAME: String = "smart_home_data.dat"
        + speichereGebaeude(gebaeude: Gebaeude): void
        + ladeGebaeude(): Gebaeude
    }

    class SmartHomeServer {
        - {static} serialVersionUID: long = 1L
        - meinGebaeude: Gebaeude
        - persistenzManager: PersistenzManager
        + SmartHomeServer()
        + {static} main(args: String[]): void
        + getGebaeude(): Gebaeude
        + getRaum(raumName: String): Raum
        + befehlAusfuehren(raumName: String, geraetName: String, befehl: String, wert: String): String
        + serverBeenden(): void
        - initDummyData(): void
    }
}

package client {
    class CLIClient {
        - serverStub: SmartHomeService
        - aktuellerRaumKontext: String
        + CLIClient()
        - verbindungHerstellen(): void
        + mainLoop(): void
        - verarbeiteBefehl(befehl: String, argument: String[]): void
        - wechselRaum(argument: String[]): void
        - zeigeGeraete(raumName: String): void
        - zeigeRaeume(): void
        - schalteGeraet(argument: String[]): void
        - setzeGeraet(argument: String[]): void
        - zeigeHilfe(): void
        + {static} main(args: String[]): void
    }

    class KonsoleDesign {
        + {static} RESET: String
        + {static} BOLD: String
        + {static} RED: String
        + {static} GREEN: String
        + {static} YELLOW: String
        + {static} BLUE: String
        + {static} CYAN: String
        + {static} BG_BLUE: String
        + {static} BG_GREEN: String
        + {static} BG_GRAY: String
        + {static} PL_ARROW: String
        - KonsoleDesign()
        + {static} clearConsole(): void
        + {static} druckeHeader(titel: String): void
    }
}

' Vererbungen und Implementierungen (shared)
SmartDevice <|-- HeizungsThermostat
Schaltbar <|.. HeizungsThermostat
SmartDevice <|-- Jalousie
SmartDevice <|-- Lichtschalter
Schaltbar <|.. Lichtschalter

' RMI-Schnittstellen-Vererbung
java.rmi.Remote <|-- SmartHomeService

' Aggregationen und Kompositionen
Gebaeude "1" *-- "0..*" Raum : enthält >
Raum "1" *-- "0..*" SmartDevice : enthält >

' Server-Struktur mit RMI-Klassen
java.rmi.server.UnicastRemoteObject <|-- SmartHomeServer
SmartHomeService <|.. SmartHomeServer
SmartHomeServer "1" --> "1" Gebaeude : verwaltet >
SmartHomeServer "1" --> "1" PersistenzManager : nutzt >

' Client-Verbindungen
CLIClient "1" --> "1" SmartHomeService : kommuniziert über (RMI Stub) >
CLIClient ..> KonsoleDesign : nutzt (Utility) >

PersistenzManager ..> Gebaeude : speichert/lädt >

@enduml